<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.epam.tc</groupId>
  <artifactId>aleksandr_nitcenkov</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <testng.configs.path>${project.build.testOutputDirectory}/testng</testng.configs.path>
    <testng.suite.file>${testng.configs.path}/add-and-sub.xml</testng.suite.file>


    <testng.version>7.4.0</testng.version>
    <assertj-core.version>3.20.2</assertj-core.version>
    <checkstyle.version>8.42</checkstyle.version>
    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
    <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
    <selenium-java.version>3.141.59</selenium-java.version>
    <webdrivermanager.version>4.4.3</webdrivermanager.version>
    <allure.version>2.14.0</allure.version>
    <aspectj.version>1.9.5</aspectj.version>

  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>2.5.2</version>
        <executions>
          <execution>
            <phase>initialize</phase>
            <goals>
              <goal>install-file</goal>
            </goals>
            <configuration>
              <groupId>com.calculator</groupId>
              <artifactId>calculator-app</artifactId>
              <version>1.0</version>
              <packaging>jar</packaging>
              <file>src/main/lib/calculator-1.0.jar</file>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven-checkstyle-plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${checkstyle.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>
            https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
          </configLocation>
          <encoding>${project.build.sourceEncoding}</encoding>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
          <linkXRef>false</linkXRef>
        </configuration>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <argLine>
            --illegal-access=permit
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
          <suiteXmlFiles>
            <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <profiles>

    <profile>
      <id>add-sub-profile</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/add-and-sub.xml</testng.suite.file>
      </properties>
    </profile>

    <profile>
      <id>multi-div-profile</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/mult-and-div-tests.xml</testng.suite.file>
      </properties>
    </profile>

    <profile>
      <id>all-tests-profile</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/all-tests.xml</testng.suite.file>
      </properties>
    </profile>

    <profile>
      <id>allure-jenkins-profile</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <testng.suite.file>${testng.configs.path}/allure-jenkins.xml</testng.suite.file>
      </properties>
    </profile>

  </profiles>

  <dependencies>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj-core.version}</version>
    </dependency>

    <dependency>
      <groupId>com.calculator</groupId>
      <artifactId>calculator-app</artifactId>
      <version>1.0</version>
    </dependency>

    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure.version}</version>
    </dependency>

    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>${webdrivermanager.version}</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium-java.version}</version>
    </dependency>

  </dependencies>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>2.10.0</version>
        <configuration>
          <reportVersion>${allure.version}</reportVersion>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

</project>
